// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer is rendering closed 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "banana": "#E9B200",
          "black": "#262B34",
          "danger": "#f04540",
          "dangerDark": "#C43833",
          "dangerLight": "#FF544F",
          "disabledGrey": "#ced4d9",
          "grey": "#697782",
          "indonesia": "#00A8Be",
          "kiwi": "#86AD20",
          "lightBlack": "#5f656b",
          "lightGrey": "#f0f3f5",
          "lightIndonesia": "#AADFE7",
          "lines": "#dce3eb",
          "link": "#216db3",
          "linkDark": "#174a79",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#ff9d26",
          "primarySoft": "#fef4e6",
          "raspBerry": "#F04540",
          "secundary": "#00A8Be",
          "secundarySoft": "#D6EEF2",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "snow": "#F0F3F5",
          "softBanana": "#FFF9DD",
          "softGrey": "#788590",
          "softIndonesia": "#D6EEF2",
          "softKiwi": "#e7f1d5",
          "softRaspBerry": "#FAE7E7",
          "stone": "#788590",
          "text": Object {
            "banana": "#E9B200",
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "indonesia": "#00A8Be",
            "kiwi": "#86AD20",
            "primary": "white",
            "raspBerry": "#F04540",
            "stone": "#788590",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "white": "#FFFFFF",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "bigText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 13,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 13,
          "fontSizeSmall": 11,
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi-"
      jss={
        Jss {
          "generateId": [Function],
          "id": 2,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.0.0-alpha.16",
        }
      }
    >
      <JssContextSubscriber
        isOpen={false}
      >
        <WithStyles(Drawer)
          closeTimeout={500}
          innerRef={null}
          isOpen={false}
          jssContext={
            Object {
              "disableStylesGeneration": false,
              "jss": Jss {
                "generateId": [Function],
                "id": 2,
                "options": Object {
                  "Renderer": [Function],
                  "createGenerateId": [Function],
                  "plugins": Array [],
                },
                "plugins": PluginsRegistry {
                  "plugins": Object {
                    "external": Array [
                      Object {
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                        "onUpdate": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                    ],
                    "internal": Array [
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                    ],
                  },
                  "registry": Object {
                    "onChangeValue": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onCreateRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessSheet": Array [],
                    "onProcessStyle": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onUpdate": Array [
                      [Function],
                    ],
                  },
                },
                "version": "10.0.0-alpha.16",
              },
              "managers": Object {
                "0": SheetsManager {
                  "length": 1,
                  "sheets": WeakMap {},
                },
              },
              "sheetOptions": Object {
                "classNamePrefix": "HoiPoi-",
                "generateId": [Function],
              },
            }
          }
          shouldCloseOnEsc={true}
          shouldCloseOnOverlayClick={true}
          side="right"
          theme={
            Object {
              "colors": Object {
                "banana": "#E9B200",
                "black": "#262B34",
                "danger": "#f04540",
                "dangerDark": "#C43833",
                "dangerLight": "#FF544F",
                "disabledGrey": "#ced4d9",
                "grey": "#697782",
                "indonesia": "#00A8Be",
                "kiwi": "#86AD20",
                "lightBlack": "#5f656b",
                "lightGrey": "#f0f3f5",
                "lightIndonesia": "#AADFE7",
                "lines": "#dce3eb",
                "link": "#216db3",
                "linkDark": "#174a79",
                "overlay": "rgba(33,33,33,0.55)",
                "placeholders": "#e1e4e7",
                "placeholdersHover": "#d0d4d8",
                "primary": "#FF8C00",
                "primaryDark": "#C87600",
                "primaryLight": "#ff9d26",
                "primarySoft": "#fef4e6",
                "raspBerry": "#F04540",
                "secundary": "#00A8Be",
                "secundarySoft": "#D6EEF2",
                "shadow": "rgba(0, 0, 0, 0.25)",
                "snow": "#F0F3F5",
                "softBanana": "#FFF9DD",
                "softGrey": "#788590",
                "softIndonesia": "#D6EEF2",
                "softKiwi": "#e7f1d5",
                "softRaspBerry": "#FAE7E7",
                "stone": "#788590",
                "text": Object {
                  "banana": "#E9B200",
                  "black": "#3c4248",
                  "danger": "white",
                  "default": "#697782",
                  "indonesia": "#00A8Be",
                  "kiwi": "#86AD20",
                  "primary": "white",
                  "raspBerry": "#F04540",
                  "stone": "#788590",
                },
                "transparentBlack": "rgba(38, 43, 52, 0.8)",
                "white": "#FFFFFF",
              },
              "effects": Object {
                "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
                "buttonActive": Object {
                  "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
                },
              },
              "typography": Object {
                "bigText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 16,
                  "letterSpacing": 0.5,
                },
                "button": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "lineHeight": 1.5,
                },
                "defaultText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 13,
                  "letterSpacing": 0.5,
                },
                "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSizeBase": 13,
                "fontSizeSmall": 11,
                "letterSpacing": 0.5,
                "lineHeightBase": 1.5,
                "smallText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "letterSpacing": 0.5,
                },
              },
            }
          }
          width="500px"
        >
          <Drawer
            classes={
              Object {
                "content": "HoiPoi-Drawer-content-0-2-2",
                "left": "HoiPoi-Drawer-left-0-2-5",
                "overlay": "HoiPoi-Drawer-overlay-0-2-3",
                "right": "HoiPoi-Drawer-right-0-2-4",
                "root": "HoiPoi-Drawer-root-0-2-1",
              }
            }
            closeTimeout={500}
            isOpen={false}
            shouldCloseOnEsc={true}
            shouldCloseOnOverlayClick={true}
            side="right"
            width="500px"
          >
            <Modal
              ariaHideApp={false}
              bodyOpenClassName="ReactModal__Body--open"
              className="HoiPoi-Drawer-root-0-2-1 HoiPoi-Drawer-right-0-2-4"
              closeTimeoutMS={500}
              isOpen={false}
              overlayClassName="HoiPoi-Drawer-overlay-0-2-3"
              parentSelector={[Function]}
              portalClassName="ReactModalPortal"
              role="dialog"
              shouldCloseOnEsc={false}
              shouldCloseOnOverlayClick={false}
              shouldFocusAfterRender={true}
              shouldReturnFocusAfterClose={true}
              style={
                Object {
                  "content": Object {
                    "width": "500px",
                  },
                }
              }
            >
              <Portal
                containerInfo={
                  <div
                    class="ReactModalPortal"
                  />
                }
              >
                <ModalPortal
                  ariaHideApp={false}
                  bodyOpenClassName="ReactModal__Body--open"
                  className="HoiPoi-Drawer-root-0-2-1 HoiPoi-Drawer-right-0-2-4"
                  closeTimeoutMS={500}
                  defaultStyles={
                    Object {
                      "content": Object {
                        "WebkitOverflowScrolling": "touch",
                        "background": "#fff",
                        "border": "1px solid #ccc",
                        "borderRadius": "4px",
                        "bottom": "40px",
                        "left": "40px",
                        "outline": "none",
                        "overflow": "auto",
                        "padding": "20px",
                        "position": "absolute",
                        "right": "40px",
                        "top": "40px",
                      },
                      "overlay": Object {
                        "backgroundColor": "rgba(255, 255, 255, 0.75)",
                        "bottom": 0,
                        "left": 0,
                        "position": "fixed",
                        "right": 0,
                        "top": 0,
                      },
                    }
                  }
                  isOpen={false}
                  overlayClassName="HoiPoi-Drawer-overlay-0-2-3"
                  parentSelector={[Function]}
                  portalClassName="ReactModalPortal"
                  role="dialog"
                  shouldCloseOnEsc={false}
                  shouldCloseOnOverlayClick={false}
                  shouldFocusAfterRender={true}
                  shouldReturnFocusAfterClose={true}
                  style={
                    Object {
                      "content": Object {
                        "width": "500px",
                      },
                    }
                  }
                />
              </Portal>
            </Modal>
          </Drawer>
        </WithStyles(Drawer)>
      </JssContextSubscriber>
    </JssProvider>
  </ThemeProvider>
</Component>
`;

exports[`Drawer is rendering opened with content 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "banana": "#E9B200",
          "black": "#262B34",
          "danger": "#f04540",
          "dangerDark": "#C43833",
          "dangerLight": "#FF544F",
          "disabledGrey": "#ced4d9",
          "grey": "#697782",
          "indonesia": "#00A8Be",
          "kiwi": "#86AD20",
          "lightBlack": "#5f656b",
          "lightGrey": "#f0f3f5",
          "lightIndonesia": "#AADFE7",
          "lines": "#dce3eb",
          "link": "#216db3",
          "linkDark": "#174a79",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#ff9d26",
          "primarySoft": "#fef4e6",
          "raspBerry": "#F04540",
          "secundary": "#00A8Be",
          "secundarySoft": "#D6EEF2",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "snow": "#F0F3F5",
          "softBanana": "#FFF9DD",
          "softGrey": "#788590",
          "softIndonesia": "#D6EEF2",
          "softKiwi": "#e7f1d5",
          "softRaspBerry": "#FAE7E7",
          "stone": "#788590",
          "text": Object {
            "banana": "#E9B200",
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "indonesia": "#00A8Be",
            "kiwi": "#86AD20",
            "primary": "white",
            "raspBerry": "#F04540",
            "stone": "#788590",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "white": "#FFFFFF",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "bigText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 13,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 13,
          "fontSizeSmall": 11,
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi-"
      jss={
        Jss {
          "generateId": [Function],
          "id": 2,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.0.0-alpha.16",
        }
      }
    >
      <JssContextSubscriber
        isOpen={true}
      >
        <WithStyles(Drawer)
          closeTimeout={500}
          innerRef={null}
          isOpen={true}
          jssContext={
            Object {
              "disableStylesGeneration": false,
              "jss": Jss {
                "generateId": [Function],
                "id": 2,
                "options": Object {
                  "Renderer": [Function],
                  "createGenerateId": [Function],
                  "plugins": Array [],
                },
                "plugins": PluginsRegistry {
                  "plugins": Object {
                    "external": Array [
                      Object {
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                        "onUpdate": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                    ],
                    "internal": Array [
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                    ],
                  },
                  "registry": Object {
                    "onChangeValue": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onCreateRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessSheet": Array [],
                    "onProcessStyle": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onUpdate": Array [
                      [Function],
                    ],
                  },
                },
                "version": "10.0.0-alpha.16",
              },
              "managers": Object {
                "0": SheetsManager {
                  "length": 1,
                  "sheets": WeakMap {},
                },
              },
              "sheetOptions": Object {
                "classNamePrefix": "HoiPoi-HoiPoi-",
                "generateId": [Function],
              },
            }
          }
          shouldCloseOnEsc={true}
          shouldCloseOnOverlayClick={true}
          side="right"
          theme={
            Object {
              "colors": Object {
                "banana": "#E9B200",
                "black": "#262B34",
                "danger": "#f04540",
                "dangerDark": "#C43833",
                "dangerLight": "#FF544F",
                "disabledGrey": "#ced4d9",
                "grey": "#697782",
                "indonesia": "#00A8Be",
                "kiwi": "#86AD20",
                "lightBlack": "#5f656b",
                "lightGrey": "#f0f3f5",
                "lightIndonesia": "#AADFE7",
                "lines": "#dce3eb",
                "link": "#216db3",
                "linkDark": "#174a79",
                "overlay": "rgba(33,33,33,0.55)",
                "placeholders": "#e1e4e7",
                "placeholdersHover": "#d0d4d8",
                "primary": "#FF8C00",
                "primaryDark": "#C87600",
                "primaryLight": "#ff9d26",
                "primarySoft": "#fef4e6",
                "raspBerry": "#F04540",
                "secundary": "#00A8Be",
                "secundarySoft": "#D6EEF2",
                "shadow": "rgba(0, 0, 0, 0.25)",
                "snow": "#F0F3F5",
                "softBanana": "#FFF9DD",
                "softGrey": "#788590",
                "softIndonesia": "#D6EEF2",
                "softKiwi": "#e7f1d5",
                "softRaspBerry": "#FAE7E7",
                "stone": "#788590",
                "text": Object {
                  "banana": "#E9B200",
                  "black": "#3c4248",
                  "danger": "white",
                  "default": "#697782",
                  "indonesia": "#00A8Be",
                  "kiwi": "#86AD20",
                  "primary": "white",
                  "raspBerry": "#F04540",
                  "stone": "#788590",
                },
                "transparentBlack": "rgba(38, 43, 52, 0.8)",
                "white": "#FFFFFF",
              },
              "effects": Object {
                "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
                "buttonActive": Object {
                  "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
                },
              },
              "typography": Object {
                "bigText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 16,
                  "letterSpacing": 0.5,
                },
                "button": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "lineHeight": 1.5,
                },
                "defaultText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 13,
                  "letterSpacing": 0.5,
                },
                "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSizeBase": 13,
                "fontSizeSmall": 11,
                "letterSpacing": 0.5,
                "lineHeightBase": 1.5,
                "smallText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "letterSpacing": 0.5,
                },
              },
            }
          }
          width="500px"
        >
          <Drawer
            classes={
              Object {
                "content": "HoiPoi-HoiPoi-Drawer-content-0-2-7",
                "left": "HoiPoi-HoiPoi-Drawer-left-0-2-10",
                "overlay": "HoiPoi-HoiPoi-Drawer-overlay-0-2-8",
                "right": "HoiPoi-HoiPoi-Drawer-right-0-2-9",
                "root": "HoiPoi-HoiPoi-Drawer-root-0-2-6",
              }
            }
            closeTimeout={500}
            isOpen={true}
            shouldCloseOnEsc={true}
            shouldCloseOnOverlayClick={true}
            side="right"
            width="500px"
          >
            <Modal
              ariaHideApp={false}
              bodyOpenClassName="ReactModal__Body--open"
              className="HoiPoi-HoiPoi-Drawer-root-0-2-6 HoiPoi-HoiPoi-Drawer-right-0-2-9"
              closeTimeoutMS={500}
              isOpen={true}
              overlayClassName="HoiPoi-HoiPoi-Drawer-overlay-0-2-8"
              parentSelector={[Function]}
              portalClassName="ReactModalPortal"
              role="dialog"
              shouldCloseOnEsc={false}
              shouldCloseOnOverlayClick={false}
              shouldFocusAfterRender={true}
              shouldReturnFocusAfterClose={true}
              style={
                Object {
                  "content": Object {
                    "width": "500px",
                  },
                }
              }
            >
              <Portal
                containerInfo={
                  <div
                    class="ReactModalPortal"
                  >
                    <div
                      class="ReactModal__Overlay ReactModal__Overlay--after-open HoiPoi-HoiPoi-Drawer-overlay-0-2-8"
                    >
                      <div
                        class="ReactModal__Content ReactModal__Content--after-open HoiPoi-HoiPoi-Drawer-root-0-2-6 HoiPoi-HoiPoi-Drawer-right-0-2-9"
                        role="dialog"
                        style="width: 500px;"
                        tabindex="-1"
                      >
                        <div
                          class="HoiPoi-HoiPoi-Drawer-content-0-2-7"
                        >
                          <span>
                            Lorem Ipsum
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                }
              >
                <ModalPortal
                  ariaHideApp={false}
                  bodyOpenClassName="ReactModal__Body--open"
                  className="HoiPoi-HoiPoi-Drawer-root-0-2-6 HoiPoi-HoiPoi-Drawer-right-0-2-9"
                  closeTimeoutMS={500}
                  defaultStyles={
                    Object {
                      "content": Object {
                        "WebkitOverflowScrolling": "touch",
                        "background": "#fff",
                        "border": "1px solid #ccc",
                        "borderRadius": "4px",
                        "bottom": "40px",
                        "left": "40px",
                        "outline": "none",
                        "overflow": "auto",
                        "padding": "20px",
                        "position": "absolute",
                        "right": "40px",
                        "top": "40px",
                      },
                      "overlay": Object {
                        "backgroundColor": "rgba(255, 255, 255, 0.75)",
                        "bottom": 0,
                        "left": 0,
                        "position": "fixed",
                        "right": 0,
                        "top": 0,
                      },
                    }
                  }
                  isOpen={true}
                  overlayClassName="HoiPoi-HoiPoi-Drawer-overlay-0-2-8"
                  parentSelector={[Function]}
                  portalClassName="ReactModalPortal"
                  role="dialog"
                  shouldCloseOnEsc={false}
                  shouldCloseOnOverlayClick={false}
                  shouldFocusAfterRender={true}
                  shouldReturnFocusAfterClose={true}
                  style={
                    Object {
                      "content": Object {
                        "width": "500px",
                      },
                    }
                  }
                >
                  <div
                    className="ReactModal__Overlay ReactModal__Overlay--after-open HoiPoi-HoiPoi-Drawer-overlay-0-2-8"
                    onClick={[Function]}
                    onMouseDown={[Function]}
                    style={Object {}}
                  >
                    <div
                      className="ReactModal__Content ReactModal__Content--after-open HoiPoi-HoiPoi-Drawer-root-0-2-6 HoiPoi-HoiPoi-Drawer-right-0-2-9"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      onMouseDown={[Function]}
                      onMouseUp={[Function]}
                      role="dialog"
                      style={
                        Object {
                          "width": "500px",
                        }
                      }
                      tabIndex="-1"
                    >
                      <div
                        className="HoiPoi-HoiPoi-Drawer-content-0-2-7"
                      >
                        <span>
                          Lorem Ipsum
                        </span>
                      </div>
                    </div>
                  </div>
                </ModalPortal>
              </Portal>
            </Modal>
          </Drawer>
        </WithStyles(Drawer)>
      </JssContextSubscriber>
    </JssProvider>
  </ThemeProvider>
</Component>
`;

exports[`Drawer pass width and classnames to modal 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "banana": "#E9B200",
          "black": "#262B34",
          "danger": "#f04540",
          "dangerDark": "#C43833",
          "dangerLight": "#FF544F",
          "disabledGrey": "#ced4d9",
          "grey": "#697782",
          "indonesia": "#00A8Be",
          "kiwi": "#86AD20",
          "lightBlack": "#5f656b",
          "lightGrey": "#f0f3f5",
          "lightIndonesia": "#AADFE7",
          "lines": "#dce3eb",
          "link": "#216db3",
          "linkDark": "#174a79",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#ff9d26",
          "primarySoft": "#fef4e6",
          "raspBerry": "#F04540",
          "secundary": "#00A8Be",
          "secundarySoft": "#D6EEF2",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "snow": "#F0F3F5",
          "softBanana": "#FFF9DD",
          "softGrey": "#788590",
          "softIndonesia": "#D6EEF2",
          "softKiwi": "#e7f1d5",
          "softRaspBerry": "#FAE7E7",
          "stone": "#788590",
          "text": Object {
            "banana": "#E9B200",
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "indonesia": "#00A8Be",
            "kiwi": "#86AD20",
            "primary": "white",
            "raspBerry": "#F04540",
            "stone": "#788590",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "white": "#FFFFFF",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "bigText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 13,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 13,
          "fontSizeSmall": 11,
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi-"
      jss={
        Jss {
          "generateId": [Function],
          "id": 2,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.0.0-alpha.16",
        }
      }
    >
      <JssContextSubscriber
        className="className-ipsum"
        classes={
          Object {
            "overlay": "overlay-ipsum",
          }
        }
        isOpen={true}
        width="400px"
      >
        <WithStyles(Drawer)
          className="className-ipsum"
          classes={
            Object {
              "overlay": "overlay-ipsum",
            }
          }
          closeTimeout={500}
          innerRef={null}
          isOpen={true}
          jssContext={
            Object {
              "disableStylesGeneration": false,
              "jss": Jss {
                "generateId": [Function],
                "id": 2,
                "options": Object {
                  "Renderer": [Function],
                  "createGenerateId": [Function],
                  "plugins": Array [],
                },
                "plugins": PluginsRegistry {
                  "plugins": Object {
                    "external": Array [
                      Object {
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                        "onUpdate": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                    ],
                    "internal": Array [
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                    ],
                  },
                  "registry": Object {
                    "onChangeValue": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onCreateRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessSheet": Array [],
                    "onProcessStyle": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onUpdate": Array [
                      [Function],
                    ],
                  },
                },
                "version": "10.0.0-alpha.16",
              },
              "managers": Object {
                "0": SheetsManager {
                  "length": 1,
                  "sheets": WeakMap {},
                },
              },
              "sheetOptions": Object {
                "classNamePrefix": "HoiPoi-HoiPoi-HoiPoi-",
                "generateId": [Function],
              },
            }
          }
          shouldCloseOnEsc={true}
          shouldCloseOnOverlayClick={true}
          side="right"
          theme={
            Object {
              "colors": Object {
                "banana": "#E9B200",
                "black": "#262B34",
                "danger": "#f04540",
                "dangerDark": "#C43833",
                "dangerLight": "#FF544F",
                "disabledGrey": "#ced4d9",
                "grey": "#697782",
                "indonesia": "#00A8Be",
                "kiwi": "#86AD20",
                "lightBlack": "#5f656b",
                "lightGrey": "#f0f3f5",
                "lightIndonesia": "#AADFE7",
                "lines": "#dce3eb",
                "link": "#216db3",
                "linkDark": "#174a79",
                "overlay": "rgba(33,33,33,0.55)",
                "placeholders": "#e1e4e7",
                "placeholdersHover": "#d0d4d8",
                "primary": "#FF8C00",
                "primaryDark": "#C87600",
                "primaryLight": "#ff9d26",
                "primarySoft": "#fef4e6",
                "raspBerry": "#F04540",
                "secundary": "#00A8Be",
                "secundarySoft": "#D6EEF2",
                "shadow": "rgba(0, 0, 0, 0.25)",
                "snow": "#F0F3F5",
                "softBanana": "#FFF9DD",
                "softGrey": "#788590",
                "softIndonesia": "#D6EEF2",
                "softKiwi": "#e7f1d5",
                "softRaspBerry": "#FAE7E7",
                "stone": "#788590",
                "text": Object {
                  "banana": "#E9B200",
                  "black": "#3c4248",
                  "danger": "white",
                  "default": "#697782",
                  "indonesia": "#00A8Be",
                  "kiwi": "#86AD20",
                  "primary": "white",
                  "raspBerry": "#F04540",
                  "stone": "#788590",
                },
                "transparentBlack": "rgba(38, 43, 52, 0.8)",
                "white": "#FFFFFF",
              },
              "effects": Object {
                "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
                "buttonActive": Object {
                  "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
                },
              },
              "typography": Object {
                "bigText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 16,
                  "letterSpacing": 0.5,
                },
                "button": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "lineHeight": 1.5,
                },
                "defaultText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 13,
                  "letterSpacing": 0.5,
                },
                "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSizeBase": 13,
                "fontSizeSmall": 11,
                "letterSpacing": 0.5,
                "lineHeightBase": 1.5,
                "smallText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "letterSpacing": 0.5,
                },
              },
            }
          }
          width="400px"
        >
          <Drawer
            className="className-ipsum"
            classes={
              Object {
                "content": "HoiPoi-HoiPoi-HoiPoi-Drawer-content-0-2-12",
                "left": "HoiPoi-HoiPoi-HoiPoi-Drawer-left-0-2-15",
                "overlay": "HoiPoi-HoiPoi-HoiPoi-Drawer-overlay-0-2-13 overlay-ipsum",
                "right": "HoiPoi-HoiPoi-HoiPoi-Drawer-right-0-2-14",
                "root": "HoiPoi-HoiPoi-HoiPoi-Drawer-root-0-2-11",
              }
            }
            closeTimeout={500}
            isOpen={true}
            shouldCloseOnEsc={true}
            shouldCloseOnOverlayClick={true}
            side="right"
            width="400px"
          >
            <Modal
              ariaHideApp={false}
              bodyOpenClassName="ReactModal__Body--open"
              className="HoiPoi-HoiPoi-HoiPoi-Drawer-root-0-2-11 HoiPoi-HoiPoi-HoiPoi-Drawer-right-0-2-14 className-ipsum"
              closeTimeoutMS={500}
              isOpen={true}
              overlayClassName="HoiPoi-HoiPoi-HoiPoi-Drawer-overlay-0-2-13 overlay-ipsum"
              parentSelector={[Function]}
              portalClassName="ReactModalPortal"
              role="dialog"
              shouldCloseOnEsc={false}
              shouldCloseOnOverlayClick={false}
              shouldFocusAfterRender={true}
              shouldReturnFocusAfterClose={true}
              style={
                Object {
                  "content": Object {
                    "width": "400px",
                  },
                }
              }
            >
              <Portal
                containerInfo={
                  <div
                    class="ReactModalPortal"
                  >
                    <div
                      class="ReactModal__Overlay ReactModal__Overlay--after-open HoiPoi-HoiPoi-HoiPoi-Drawer-overlay-0-2-13 overlay-ipsum"
                    >
                      <div
                        class="ReactModal__Content ReactModal__Content--after-open HoiPoi-HoiPoi-HoiPoi-Drawer-root-0-2-11 HoiPoi-HoiPoi-HoiPoi-Drawer-right-0-2-14 className-ipsum"
                        role="dialog"
                        style="width: 400px;"
                        tabindex="-1"
                      >
                        <div
                          class="HoiPoi-HoiPoi-HoiPoi-Drawer-content-0-2-12"
                        >
                          <span>
                            Lorem Ipsum
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                }
              >
                <ModalPortal
                  ariaHideApp={false}
                  bodyOpenClassName="ReactModal__Body--open"
                  className="HoiPoi-HoiPoi-HoiPoi-Drawer-root-0-2-11 HoiPoi-HoiPoi-HoiPoi-Drawer-right-0-2-14 className-ipsum"
                  closeTimeoutMS={500}
                  defaultStyles={
                    Object {
                      "content": Object {
                        "WebkitOverflowScrolling": "touch",
                        "background": "#fff",
                        "border": "1px solid #ccc",
                        "borderRadius": "4px",
                        "bottom": "40px",
                        "left": "40px",
                        "outline": "none",
                        "overflow": "auto",
                        "padding": "20px",
                        "position": "absolute",
                        "right": "40px",
                        "top": "40px",
                      },
                      "overlay": Object {
                        "backgroundColor": "rgba(255, 255, 255, 0.75)",
                        "bottom": 0,
                        "left": 0,
                        "position": "fixed",
                        "right": 0,
                        "top": 0,
                      },
                    }
                  }
                  isOpen={true}
                  overlayClassName="HoiPoi-HoiPoi-HoiPoi-Drawer-overlay-0-2-13 overlay-ipsum"
                  parentSelector={[Function]}
                  portalClassName="ReactModalPortal"
                  role="dialog"
                  shouldCloseOnEsc={false}
                  shouldCloseOnOverlayClick={false}
                  shouldFocusAfterRender={true}
                  shouldReturnFocusAfterClose={true}
                  style={
                    Object {
                      "content": Object {
                        "width": "400px",
                      },
                    }
                  }
                >
                  <div
                    className="ReactModal__Overlay ReactModal__Overlay--after-open HoiPoi-HoiPoi-HoiPoi-Drawer-overlay-0-2-13 overlay-ipsum"
                    onClick={[Function]}
                    onMouseDown={[Function]}
                    style={Object {}}
                  >
                    <div
                      className="ReactModal__Content ReactModal__Content--after-open HoiPoi-HoiPoi-HoiPoi-Drawer-root-0-2-11 HoiPoi-HoiPoi-HoiPoi-Drawer-right-0-2-14 className-ipsum"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      onMouseDown={[Function]}
                      onMouseUp={[Function]}
                      role="dialog"
                      style={
                        Object {
                          "width": "400px",
                        }
                      }
                      tabIndex="-1"
                    >
                      <div
                        className="HoiPoi-HoiPoi-HoiPoi-Drawer-content-0-2-12"
                      >
                        <span>
                          Lorem Ipsum
                        </span>
                      </div>
                    </div>
                  </div>
                </ModalPortal>
              </Portal>
            </Modal>
          </Drawer>
        </WithStyles(Drawer)>
      </JssContextSubscriber>
    </JssProvider>
  </ThemeProvider>
</Component>
`;
